# DEVweek22-example

./: CMakeLists.txt  kernel.cpp  kernel.cu  kernel.h  main.cpp  main.cu
kernel/: kernel.cu
